Some fixing and little changes

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     
 </head>
 <body>
+    
 
     <div class="search--field">
         <h1>Search for food</h1>
         <form action="" class="search">
             <input type="text" id="food-input">
-            <input class="btn" type="button"  value="Search">
+            <button class="btn" id="btns" type="button"><p>&#128269;</p></button>
         </form>
     </div>
 
     <div class="resulting-search hidden">
         <h1>Results</h1>
     </div>
+
+    <button class="btn hidden" id="btnb">Back to Search</button>
 
     <script src="index.js"></script>
 
